# taipei-real-estate

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/hooks/: session-start.sh
docs/: ROUTINE.md  RULES.md
scripts/: run.ps1
src/: airtable_client.py  config.py  main.py  models.py
src/filters/: rules.py
src/scrapers/: site_591.py  site_hbhousing.py  site_sinyi.py  site_yungching.py
tests/: test_591.py  test_airtable_client.py  test_hbhousing.py  test_rules.py  test_sinyi.py  test_yungching.py
